# dSpaceX

./: .gitignore  CMakeLists.txt  EigenL1Metric.h  README.md  README.txt  conda_installs.sh
ExternalLibs/boost/: CMakeLists.txt
cli/: CMakeLists.txt  HDVizProcess.cpp  HDVizProcess.cxx
commandline/: BlockCEM.cxx  CEMRegression_optimize.cxx  CMakeLists.txt  COMPILING  Display.h  DisplayImagePCA.h  DisplayMolecule.h  DisplayTubes.cpp  DisplayTubes.h  FastCEM.cxx  HDViz.cpp  HDVizData.cpp  HDVizData.h  HDVizGeom.cpp  HDVizProcess.cxx  Isomap.cxx  JoinMatrices.cxx  MSRegression.cxx  MatrixMultiplication.cxx  MatrixToCSV.cxx  NNMSComplex.cxx  NNMSComplex2.cxx  ObjFromMatrix.cxx  Old-HDVizProcessing.cxx  Old-HDVizProcessing2.cxx  PCA.cxx  SortMatrix.cxx  SymmetricEigensystem.cxx
gui/: .nfs00000001b04a699c000003f8  CMakeLists.txt  CMakeListsRelease.txt  Display.h  DisplayCurves.h  DisplayGraph.cpp  DisplayGraph.h  DisplayMolecule.h  DisplayRange.h  DisplayTubes.cpp  DisplayTubes.cpp.autosave  DisplayTubes.h  HDViz.cpp  HDViz2.cpp  HDVizData.cpp  HDVizData.h  HDVizState.h  ImageLoader.cpp  README
gui/shaders/: node.frag  node.geom  node.vert
lib/: AdaptiveKernelDensity.h  BlockCEM.h  CMakeLists.txt  Distance.h  FastCEM.h  FileCachedHDVizData.cpp  FileCachedHDVizData.h  FileCachedHDVizDataImpl.cpp  FileCachedHDVizDataImpl.h  HDProcessResult.h  HDProcessResultSerializer.cpp  HDProcessor.cpp  HDProcessor.h  HDVizData.cpp  HDVizData.h  ImageIO.h  ImageVectorConverter.h  Isomap.h  KNNNeighborhood.h  KernelInterpolator.h  Kmeans.h  L1Metric.h  LegacyTopologyDataImpl.cpp  LegacyTopologyDataImpl.h  MahalanobisKernel.h  MetricMDS.h  MetricTensorKNNNeighborhood.h  NNMSComplex.h  NNMSComplex2.h  NNMSComplex2old.h  Random.h  SVD.h  SimpleHDVizDataImpl.cpp  SimpleHDVizDataImpl.h  TangentEpsilonNeighborhood.h  TangentKNNNeighborhood.h  TopologyData.h  Wasserstein.h  ex_raw.c  round_cap.c  (+1 more)
lib/analysis/: HDGenericProcessor.h  HDProcessResultSerializer.h  HDProcessor.cpp  HDProcessor.h
lib/ann/: CMakeLists.txt
lib/annmod/: CMakeLists.txt
lib/annmod/ann/: perf.cpp
lib/annmod/lib/: ANNWrapper.h
lib/base64/: CMakeLists.txt
lib/dataset/: CMakeLists.txt  Dataset.cpp  Dataset.h  DatasetLoader.cpp  DatasetLoader.h  Fieldtype.h  Precision.h  ValueIndexPair.h
lib/dimred/: CEM.h  CMakeLists.txt  FastCEM.h  Isomap.h  MetricMDS.h  MetricTensorKNNNeighborhood.h  PCA.h
lib/dimred/commandline/: BlockCEM.cxx  CMakeLists.txt  Isomap.cxx
lib/dimred/lib/: BlockCEM.h  CEMRegression.h  Isomap.h  MetricMDS.h
lib/dspacex/: CMakeLists.txt  Dataset.cpp  Dataset.h  DatasetLoader.cpp  DatasetLoader.h  Fieldtype.h  Precision.h
lib/export/: CMakeLists.txt  DataExport.cpp  DataExport.h
lib/flinalg/: CMakeLists.txt  DenseMatrix.h  DenseVector.h  Linalg.h  LinalgIO.h  Matrix.h  README.md  SparseMatrix.h  SymmetricEigensystem.h  Vector.h
lib/flinalg/commandline/: JoinMatrices.cxx  ObjFromMatrix.cxx
lib/flinalg/lib/: SparseMatrix.h
lib/flinalg/matlab/: WriteLinalgMatrix.cpp
lib/gle/: CMakeLists.txt
lib/graph/: EpsilonNeighborhood.h  GraphAlgorithms.h  KNNNeighborhood.h  Neighborhood.h
lib/hdprocess/: CMakeLists.txt  FileCachedHDVizDataImpl.cpp  FileCachedHDVizDataImpl.h  HDGenericProcessor.h  HDProcessResult.h  HDProcessResultSerializer.cpp  HDProcessor.cpp  HDProcessor.h  HDVizData.h  HDVizLayout.h  LegacyTopologyDataImpl.cpp  LegacyTopologyDataImpl.h  SimpleHDVizDataImpl.cpp  SimpleHDVizDataImpl.h  TopologyData.h
lib/imageutils/: CMakeLists.txt  Image.cpp  Image.h  ImageIO.h  ImageLoader.cpp  ImageLoader.h  ImageNeighborhood.h  README.md
lib/kernelstats/: AdaptiveKernelDensity.h  CMakeLists.txt  FirstOrderKernelRegression.h  GaussianKernel.h  Kernel.h  KernelInterpolator.h  KernelMetric.h  KernelRegression2.h  WeightedKernelRegression.h
lib/lodepng/: CMakeLists.txt
lib/metrics/: Distance.h  EigenEuclideanMetric.h  EigenL1Metric.h  EuclideanMetric.h  Metric.h
lib/morsesmale/: CMakeLists.txt  NNMSComplex.h  NNMSComplexSaddles.h  README.md
lib/optparse/: optparse.h
lib/pmodels/: CMakeLists.txt  Model.cpp  Model.h  Models.cpp  Models.h  Modelset.cpp  Modelset.h  MorseSmale.cpp  MorseSmale.h  ShapeOdds.cpp  SharedGP.cpp
lib/serverlib/: CMakeLists.txt  Makefile  NMakefile  README.txt  client-handshake.c  extension-deflate-stream.c  extension-x-google-mux.c  extension-x-google-mux.h  fwv.c  handshake.c  libwebsockets.c  libwebsockets.h  parsers.c  private-libwebsockets.h  server.c  slint  test.f  test.make  wst.c  wst.h  wstypes.h  wv.c
lib/shapeodds/: CMakeLists.txt  ShapeOdds.cpp  ShapeOdds.h
lib/sharedgp/: CMakeLists.txt  SharedGP.h
lib/tSNE/: CMakeLists.txt
lib/tinyply/: CMakeLists.txt
lib/util/: DenseVectorSample.h
lib/utils/: CMakeLists.txt  Data.h  DenseVectorSample.h  IO.h  StringUtils.cpp  StringUtils.h  loaders.h  utils.cpp  utils.h
lib/yaml-cpp/: CMakeLists.txt
python/: CMakeLists.txt  README.md  dspacexModule.cpp
server/: CMakeLists.txt  Controller.cpp  Controller.h  Dataset.h  DatasetLoader.cpp  DatasetLoader.h  Makefile  controller.cpp  controller.h  dSpaceX.cpp  dsxdyn.c  dsxdyn.h  main.cpp  render.c  render.cpp  server.cpp
test/: CMakeLists.txt
test/data/: Crystals_0.data  Crystals_0.data.hdr  Crystals_1.data  Crystals_1.data.hdr  Crystals_10.data  Crystals_10.data.hdr  Crystals_11.data  Crystals_11.data.hdr  Crystals_12.data  Crystals_12.data.hdr  Crystals_13.data.hdr  Crystals_2.data  Crystals_2.data.hdr  Crystals_3.data  Crystals_3.data.hdr  Crystals_4.data  Crystals_4.data.hdr  Crystals_5.data  Crystals_5.data.hdr  Crystals_6.data  Crystals_6.data.hdr  Crystals_7.data  Crystals_7.data.hdr  Crystals_8.data  Crystals_8.data.hdr  Crystals_9.data  Crystals_9.data.hdr  ExtremaLayout_0.data  ExtremaLayout_0.data.hdr  ExtremaLayout_1.data  ExtremaLayout_1.data.hdr  ExtremaLayout_10.data  ExtremaLayout_10.data.hdr  ExtremaLayout_11.data  ExtremaLayout_11.data.hdr  ExtremaLayout_12.data  ExtremaLayout_12.data.hdr  ExtremaLayout_13.data  ExtremaLayout_13.data.hdr  ExtremaLayout_2.data  (+2123 more)
test/lib/: CMakeLists.txt  DataLoader_tests.cpp  HDVizData_tests.cpp
(+343 files in other folders)
