cmake_minimum_required(VERSION 2.6)

PROJECT(HDViz)

FIND_PACKAGE(GLUT)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(FreeType)
FIND_PACKAGE(FTGL)
#FIND_PACKAGE(GLE)


option(BUILD_HDVIZ_IMAGE "Build hdviz for image data" OFF)
option(BUILD_HDVIZPORCESSING "Build HDViz preprocessing tool" OFF)
 
# Use itk.  This sets up include/link directories for us.
if(BUILD_HDVIZ_IMAGE)
# Find common/itk
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})
INCLUDE_DIRECTORIES(${ITK_INCLUDE_DIR})
endif(BUILD_HDVIZ_IMAGE)

LINK_DIRECTORIES( ${GLE_LINK_DIR} ${ANN_LINK_DIR} )

INCLUDE_DIRECTORIES(${FTGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR_ft2build}  ${FREETYPE_INCLUDE_DIR_freetype2} ${GLUT_INCLUDE_DIR} ${GLE_INCLUDE_FILES} )


ADD_EXECUTABLE(HDViz HDViz.cpp )
TARGET_LINK_LIBRARIES (HDViz 
  gle 
    ${FTGL_LIBRARIES}  
    ${FREETYPE_LIBRARY}  
    ${OPENGL_LIBRARIES}  
    ${GLUT_LIBRARIES}
)
SET_TARGET_PROPERTIES(HDViz PROPERTIES COMPILE_FLAGS -DFONTNAME=${CMAKE_CURRENT_SOURCE_DIR}/DejaVuSans.ttf) 


if(BUILD_HDVIZ_IMAGE)

ADD_EXECUTABLE(HDViz_3D HDViz.cpp )
TARGET_LINK_LIBRARIES (HDViz_3D 
  gle 
    gfortran
    blas
    lapack   
    ${FTGL_LIBRARIES}  
    ${FREETYPE_LIBRARY}  
    ${OPENGL_LIBRARIES}  
    ${GLUT_LIBRARIES}    
    ${ITK_LIBRARIES}
)

ADD_EXECUTABLE(HDViz_2D HDViz.cpp )
TARGET_LINK_LIBRARIES (HDViz_2D 
    gle 
    gfortran
    blas
    lapack   
    ${FTGL_LIBRARIES}  
    ${FREETYPE_LIBRARY}  
    ${OPENGL_LIBRARIES}  
    ${GLUT_LIBRARIES}
    ${ITK_LIBRARIES}
)
SET_TARGET_PROPERTIES( HDViz_2D PROPERTIES COMPILE_DEFINITIONS DIMENSION=2 COMPILE_FLAGS -DFONTNAME=${CMAKE_CURRENT_SOURCE_DIR}/DejaVuSans.ttf)
SET_TARGET_PROPERTIES( HDViz_3D PROPERTIES COMPILE_DEFINITIONS DIMENSION=3 COMPILE_FLAGS -DFONTNAME=${CMAKE_CURRENT_SOURCE_DIR}/DejaVuSans.ttf)
endif(BUILD_HDVIZ_IMAGE)



if(BUILD_HDVIZPORCESSING)
FIND_PACKAGE(LAPACK)
FIND_PACKAGE(BLAS)
LINK_DIRECTORIES( ${ANN_LINK_DIR} )
ADD_EXECUTABLE(HDVizProcessing HDVizProcess.cxx)
TARGET_LINK_LIBRARIES (HDVizProcessing 
    blas
    lapack    
    gfortran
    ANN 
)
endif(BUILD_HDVIZPORCESSING)



