CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(DimRed)

OPTION(BUILD_DIMRED_CLI "Build DimRed-cli" OFF)

FIND_PACKAGE(LAPACK)
FIND_PACKAGE(BLAS)

INCLUDE_DIRECTORIES( lib ${ANN_INCLUDE_FILES} )

if(BUILD_DIMRED_CLI)
  ADD_SUBDIRECTORY(commandline)
endif()
