CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(Export)

SET(EXPORT_HEADER_FILES
        DataExport.h)

SET(EXPORT_SOURCE_FILES
        DataExport.cpp)

ADD_LIBRARY(export ${EXPORT_HEADER_FILES} ${EXPORT_SOURCE_FILES})


