CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(ImageUtils)

INCLUDE_DIRECTORIES(lib)


SET(IMAGE_UTILS_HEADER_FILES
  ImageLoader.h)

SET(IMAGE_UTILS_SOURCE_FILES
  ImageLoader.cpp)

ADD_LIBRARY(imageutils ${IMAGE_UTILS_HEADER_FILES} ${IMAGE_UTILS_SOURCE_FILES})
