PROJECT(ImageUtils)
find_package(yaml-cpp REQUIRED)

SET(IMAGE_UTILS_HEADER_FILES
  Image.h)

SET(IMAGE_UTILS_SOURCE_FILES
  Image.cpp)

ADD_LIBRARY(imageutils ${IMAGE_UTILS_HEADER_FILES} ${IMAGE_UTILS_SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(imageutils PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
  $<INSTALL_INTERFACE:include>)

TARGET_LINK_LIBRARIES(imageutils
  lodepng
  yaml-cpp
  )

