CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(MorseSmaleComplex)

OPTION(BUILD_MORSE_SMALE_CLI "Build morse-smale cli" OFF)

FIND_PACKAGE(LAPACK)
FIND_PACKAGE(BLAS)

LINK_DIRECTORIES( ${ANN_LINK_DIR} )

INCLUDE_DIRECTORIES( lib ${ANN_INCLUDE_FILES} )

if(BUILD_MORSE_SMALE_CLI)
  ADD_SUBDIRECTORY(commandline)
endif()