SET(PMODELS_HEADER_FILES
  MorseSmale.h
  Models.h
)

SET(PMODELS_SOURCE_FILES
  ShapeOdds.cpp
  MorseSmale.cpp
  Models.cpp
)

ADD_LIBRARY(pmodels ${PMODELS_HEADER_FILES} ${PMODELS_SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(pmodels PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
  $<INSTALL_INTERFACE:include>)
TARGET_LINK_LIBRARIES(pmodels
  dspacex
  dspacex_utils
  lodepng)
