SET(PMODELS_HEADER_FILES
  Modelset.h
  Model.h
)

SET(PMODELS_SOURCE_FILES
  Modelset.cpp
  Model.cpp
)

ADD_LIBRARY(pmodels ${PMODELS_HEADER_FILES} ${PMODELS_SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(pmodels PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
  $<INSTALL_INTERFACE:include>)
TARGET_LINK_LIBRARIES(pmodels
  dspacex
  dspacex_utils
  lodepng)
